@@ -1,4 +1,5 @@
 0.4.0:
+* chs: new words chs-set-string,chs-reset-string (2006-12-11)
 * Comment cleanup (2006-12-10)
 * tmr: new module (Timer) (2006-12-8)
 * crc: word scr-free renamed to crc-free (bug)
